@@ -29,6 +29,21 @@ WriteMakefile(
         : ()
     ),
 
+    ($mm_ver <= 6.45
+        ? ()
+        : (META_MERGE => {
+            'meta-spec' => { version => 2 },
+            resources => {
+                bugtracker  => 'http://rt.cpan.org/Public/Dist/Display.html?Name=HTML-Diff',
+                repository  => {
+                    type => 'git',
+                    web  => 'https://github.com/neilbowers/html-diff',
+                    url  => 'git://github.com/neilbowers/html-diff.git',
+                },
+            },
+          })
+    ),
+
     EXE_FILES    => ['htmldiff'],
 );
 
